--- a/signature.html
+++ b/signature.html
@@ -6,7 +6,7 @@
     <title>Signature</title>
 </head>
 <body>
-    <table border="1">
+    <table border="1" cellpadding="0" cellspacing="0">
         <tbody>
             <tr>
                 <td>
@@ -14,7 +14,10 @@
                         <tbody>
                             <tr>
                                 <td>PHOTO</td>
-                                <td>Prénom NOM Société</td>
+                                <td>
+                                    <h3>Ludovic RUBIO</h3>
+                                    <p>Aigle Développement</p>
+                                </td>
                                 <td>
                                     <table>
                                         <tbody>
