--- a/signature.html
+++ b/signature.html
@@ -10,7 +10,7 @@
         <tbody>
             <tr>
                 <td>
-                    <table>
+                    <table border="1" cellpadding="0" cellspacing="0">
                         <tbody>
                             <tr>
                                 <td>PHOTO</td>
@@ -19,11 +19,11 @@
                                     <p>Aigle Développement</p>
                                 </td>
                                 <td>
-                                    <table>
+                                    <table border="1" cellpadding="0" cellspacing="0">
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <table>
+                                                    <table border="1" cellpadding="0" cellspacing="0">
                                                         <tbody>
                                                             <tr>
                                                                 <td>
@@ -37,7 +37,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <table>
+                                                    <table border="1" cellpadding="0" cellspacing="0">
                                                         <tbody>
                                                             <tr>
                                                                 <td>
@@ -50,7 +50,7 @@
                                                 <td>mail</td>
                                                 <tr>
                                                     <td>
-                                                        <table>
+                                                        <table border="1" cellpadding="0" cellspacing="0">
                                                             <tbody>
                                                                 <tr>
                                                                     <td>
@@ -64,7 +64,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <table>
+                                                        <table border="1" cellpadding="0" cellspacing="0">
                                                             <tbody>
                                                                 <tr>
                                                                     <td>
@@ -87,7 +87,7 @@
             </tr>
             <tr>
                 <td>
-                    <table>
+                    <table border="1" cellpadding="0" cellspacing="0">
                         <tbody>
                             <tr>
                                 <td>i RS</td>
