--- a/signature.html
+++ b/signature.html
@@ -13,7 +13,7 @@
                     <table border="1" cellpadding="0" cellspacing="0">
                         <tbody>
                             <tr>
-                                <td><img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Man_Silhouette.png"></td>
+                                <td><img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Man_Silhouette.png" width="130" style="max-width: 130px;"></td>
                                 <td>
                                     <h3>Ludovic RUBIO</h3>
                                     <p>Aigle Développement</p>
