photo + nom + cell et bordure ok

--- a/signature.html
+++ b/signature.html
@@ -6,27 +6,45 @@
     <title>Signature</title>
 </head>
 <body>
-    <table border="1" cellpadding="0" cellspacing="0">
+    <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
         <tbody>
             <tr>
                 <td>
-                    <table border="1" cellpadding="0" cellspacing="0">
+                    <table border="0" cellpadding="0" cellspacing="0" style="vertical-align: middle;">
                         <tbody>
                             <tr>
-                                <td><img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Man_Silhouette.png" width="130" style="max-width: 130px;"></td>
-                                <td>
-                                    <h3>Ludovic RUBIO</h3>
-                                    <p>Aigle Développement</p>
+                                <!-- Colonne avec la photo -->
+                                <td width="150" style="vertical-align: middle;"><!-- Colonne de 150px de large centré verticalement -->
+                                    <span style="margin-right:20px; display: block;"><!-- Décalage à droite de 20px, se comporte comme un bloc -->
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Man_Silhouette.png" width="130" style="max-width: 130px;">
+                                    </span>
                                 </td>
+                                <td style="vertical-align: middle;"><!-- Centré verticalement -->
+                                    <h3 color="blue" style="color: #3399ff; margin: 0px; font-size: 18px;">Ludovic RUBIO</h3>
+                                    <p color="blue" font-size="medium" style="color: #3399ff; margin: 0px; font-size: 16px; line-height: 22px;">Aigle Développement</p>
+                                </td>
+                                <!-- DEBUT COLONNE VIDE DE 30PX -->
+                                <td width="30">
+                                    <div style="width: 30px;"></div>
+                                </td>
+                                <!-- FIN COLONNE VIDE DE 30PX -->
+                                <!-- DEBUT Ligne de séparation -->
+                                <td color="blue" direction="vertical" width="1" style="color: #3399ff; width: 1px; border-bottom: none; border-left: 1px solid #3399ff;"></td>
+                                <!-- FIN Ligne de séparation -->
+                                <!-- DEBUT COLONNE VIDE DE 30PX -->
+                                <td width="30">
+                                    <div style="width: 30px;"></div>
+                                </td>
+                                <!-- FIN COLONNE VIDE DE 30PX -->
                                 <td>
-                                    <table border="1" cellpadding="0" cellspacing="0">
+                                    <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                         <tbody>
-                                            <tr>
-                                                <td>
-                                                    <table border="1" cellpadding="0" cellspacing="0">
+                                            <tr style="vertical-align: middle;"><!-- Centré verticalement -->
+                                                <td style="vertical-align: middle;"><!-- Centré verticalement -->
+                                                    <table border="1" cellpadding="0" cellspacing="0"style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>
+                                                                <td style="vertical-align: bottom;"><!-- Aligné en bas -->
                                                                     i tel
                                                                 </td>
                                                             </tr>
@@ -37,7 +55,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <table border="1" cellpadding="0" cellspacing="0">
+                                                    <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                         <tbody>
                                                             <tr>
                                                                 <td>
@@ -50,7 +68,7 @@
                                                 <td>mail</td>
                                                 <tr>
                                                     <td>
-                                                        <table border="1" cellpadding="0" cellspacing="0">
+                                                        <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                             <tbody>
                                                                 <tr>
                                                                     <td>
@@ -64,7 +82,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <table border="1" cellpadding="0" cellspacing="0">
+                                                        <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                             <tbody>
                                                                 <tr>
                                                                     <td>
@@ -87,7 +105,7 @@
             </tr>
             <tr>
                 <td>
-                    <table border="1" cellpadding="0" cellspacing="0">
+                    <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                         <tbody>
                             <tr>
                                 <td>i RS</td>
