--- a/signature.html
+++ b/signature.html
@@ -10,7 +10,7 @@
         <tbody>
             <tr>
                 <td>
-                    <table border="0" cellpadding="0" cellspacing="0" style="vertical-align: middle;">
+                    <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: middle;">
                         <tbody>
                             <tr>
                                 <!-- Colonne avec la photo -->
@@ -39,27 +39,32 @@
                                 <td>
                                     <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                         <tbody>
-                                            <tr style="vertical-align: middle;"><!-- Centré verticalement -->
-                                                <td style="vertical-align: middle;"><!-- Centré verticalement -->
+                                            <tr height="25" style="vertical-align: middle;"><!-- Hauteur de ligne de 25px et centré verticalement -->
+                                                <td width="30" style="vertical-align: middle;"><!-- Largeur de 30px Centré verticalement -->
                                                     <table border="1" cellpadding="0" cellspacing="0"style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                         <tbody>
                                                             <tr>
                                                                 <td style="vertical-align: bottom;"><!-- Aligné en bas -->
-                                                                    i tel
+                                                                    <a href="tel:+33663147314" style="text-decoration: none;">
+                                                                        <img src="https://cdn.icon-icons.com/icons2/1863/PNG/512/phone-in-talk_118806.png" width="15" style="display: block;">
+                                                                    </a>
                                                                 </td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
                                                 </td>
-                                                <td>telephone</td>
+                                                <td style="padding: 0px; color: blue;">
+                                                    <a href="tel:+33663147314" style="text-decoration: none; color:blue;font-size: 12px;">+33 (0)6 63 14 73 14</a>
+                                                    
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td>
                                                     <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>
-                                                                    i mail
+                                                                <td style="vertical-align: bottom;"><!-- Aligné en bas -->
+                                                                    <img src="https://cdn.icon-icons.com/icons2/1863/PNG/512/mail-outline_118931.png" width="15" style="display: block;">
                                                                 </td>
                                                             </tr>
                                                         </tbody>
@@ -71,8 +76,8 @@
                                                         <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                             <tbody>
                                                                 <tr>
-                                                                    <td>
-                                                                        i web
+                                                                    <td style="vertical-align: bottom;"><!-- Aligné en bas -->
+                                                                        <img src="https://cdn.icon-icons.com/icons2/1863/PNG/512/alternate-email_119438.png" width="15" style="display: block;">
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
@@ -85,8 +90,8 @@
                                                         <table border="1" cellpadding="0" cellspacing="0" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial, Helvetica, sans-serif;">
                                                             <tbody>
                                                                 <tr>
-                                                                    <td>
-                                                                        i map
+                                                                    <td style="vertical-align: bottom;"><!-- Aligné en bas -->
+                                                                        <img src="https://cdn.icon-icons.com/icons2/1863/PNG/512/place_118782.png" width="15" style="display: block;">
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
